--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -219,4 +219,85 @@
   </div>
 </div>
 
+<!--Footer-->
+
+
+
+<footer id="footer">
+  <a style="display: block; background-color: RGB(55,71,90); width: 100%; text-align: center; padding: 10px; text-decoration: none; color: white;" href="#">Inicio de pagina</a> 
+
+  <div style="display: grid;
+              width: 100%;
+              height: 400px;
+              grid-template-columns: 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr;
+              grid-template-rows: 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr;
+              width: 100%;
+              background-color: 
+              RGB(35,47,62);
+              padding-top: 50px;">
+
+    <section style="grid-column-start: 2;
+                    grid-column-end: 5;
+                    grid-row-start: 2;
+                    grid-row-end: 6;">
+      <ul style="list-style: none;">
+        <li><a style="display: block; color: white; margin-bottom: 10px;" href="#"><strong>Conócenos</strong></a></li>
+        <li><a style="display: block; color: white; font-size: 15px; color: white; width: 100px; " href="#">Trabaja en Amazon</a></li>
+        <li><a style="display: block; color: white; font-size: 15px; width: 100px; " href="#">Blog</a></li>
+        <li><a style="display: block; color: white; font-size: 15px; width: 100px; " href="#">Acerca de Amazon</a></li>
+        <li><a style="display: block; color: white; font-size: 15px; width: 100px; " href="#">Relaciones con los Inversionistas</a></li>
+        <li><a style="display: block; color: white; font-size: 15px; width: 100px; " href="#">Dispositivos Amazon</a></li>
+        <li><a style="display: block; color: white; font-size: 15px; width: 100px; " href="#">Amazon Tours</a></li>
+      </ul>
+    </section>
+
+    <section style="grid-column-start: 4;
+                    grid-column-end: 8;
+                    grid-row-start: 2;
+                    grid-row-end: 6;">
+      <ul style="list-style: none;">
+        <li><a style="display: block; color: white; margin-bottom: 10px;" href="#"><strong>Gana Dinero con Nosotros</strong></a></li>
+        <li><a style="display: block; color: white; font-size: 15px; width: 200px; " href="#">Vender productos en Amazon</a></li>
+        <li><a style="display: block; color: white; font-size: 15px; width: 200px; " href="#">Vender aplicaciones en Amazon</a></li>
+        <li><a style="display: block; color: white; font-size: 15px; width: 200px; " href="#">Programa de Afiliados</a></li>
+        <li><a style="display: block; color: white; font-size: 15px; width: 200px; " href="#">Anuncia tus Productos</a></li>
+        <li><a style="display: block; color: white; font-size: 15px; width: 200px; " href="#">Publica tu Libro en Kindle</a></li>
+        <li><a style="display: block; color: white; font-size: 15px; width: 200px; " href="#">Habilita un Amazon Hub</a></li>
+        <li><a style="display: block; color: white; font-size: 15px; width: 200px; " href="#">›Ver más Gana Dinero con Nosotros</a></li>
+      </ul>
+    </section>
+
+    <section style="grid-column-start: 7;
+                    grid-column-end: 9;
+                    grid-row-start: 2;
+                    grid-row-end: 6;">
+      <ul style="list-style: none;">
+        <li><a style="display: block; color: white; margin-bottom: 10px;" href="#"><strong>Productos de Pago de Amazon</strong></a></li>
+        <li><a style="display: block; color: white; font-size: 15px; color: white; width: 100px; " href="#">Trabaja en Amazon</a></li>
+        <li><a style="display: block; color: white; font-size: 15px; width: 200px; " href="#">Blog</a></li>
+        <li><a style="display: block; color: white; font-size: 15px; width: 200px; " href="#">Acerca de Amazon</a></li>
+      </ul>
+    </section>
+
+    <section style="grid-column-start: 9;
+                    grid-column-end: 12;
+                    grid-row-start: 2;
+                    margin-left: 50px;">
+      <ul style="list-style: none;">
+        <li><a style="display: block; color: white; margin-bottom: 10px;" href="#"><strong>Podemos Ayudarte</strong></a></li>
+        <li><a style="display: block; color: white; font-size: 15px; color: white; width: 100px; " href="#">Amazon y el COVID-19</a></li>
+        <li><a style="display: block; color: white; font-size: 15px; width: 350px; " href="#">Tu Cuenta</a></li>
+        <li><a style="display: block; color: white; font-size: 15px; width: 200px; " href="#">Tus Pedidos</a></li>
+        <li><a style="display: block; color: white; font-size: 15px; width: 200px; " href="#">Tarifas de Envío y Políticas</a></li>
+        <li><a style="display: block; color: white; font-size: 15px; width: 200px; " href="#">Devoluciones y Reemplazos</a></li>
+        <li><a style="display: block; color: white; font-size: 15px; width: 200px; " href="#">Administrar Contenido y Dispositivos</a></li>
+        <li><a style="display: block; color: white; font-size: 15px; width: 200px; " href="#">Amazon Assistant</a></li>
+        <li><a style="display: block; color: white; font-size: 15px; width: 200px; " href="#">Ayuda</a></li>
+      </ul>
+    </section>
+
+
+  </div>
+</footer>
+
 </body>
